--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@ body {
 h1,h2 {
     line-height: 1.1;
     color: #222;
+    /* padding: 5px; */
 }
 
 h1 {
@@ -22,6 +23,7 @@ h2 {
     color: #393939;
     font-weight: 600;
     font-size: 30px;
+    margin-top:30px;
 }
 
 img {
@@ -36,9 +38,15 @@ header p {
     font-size: 20px;
 }
 
-p,ul,ol,pre {
-    margin: 0 0 30px;
+p,ol,pre,ul {
+    margin: 0 0 10px;
     font-size: 18px;
+    /* margin-bottom: 10px; */
+}
+
+li{
+    margin-top: 5px;
+    margin-bottom: 10px;
 }
 
 a {
